# Vectorize.jl

./: .gitignore  .travis.yml  LICENSE  LICENSE.md  Project.toml  README.md  TODO.md  appveyor.yml
benchmark/: benchmark.jl
doc/: Makefile  benchmarks.rst  conf.py  devdocs.rst  functions.rst  index.rst  installation.rst
src/: Accelerate.jl  Functions.jl  VML.jl  Vectorize.jl  Yeppp.jl
src/Base/: README.md  alloc.c  codegen.cpp  interpreter.c  jltypes.c  julia-syntax.scm  julia.h
src/Vectorize/: .gitignore  CMakeLists.txt  Makefile
src/Vectorize/Vectorize/: CMakeLists.txt  Vectorize.cpp
src/VectorizePass/: .gitignore  CMakeLists.txt  Makefile
src/VectorizePass/VectorizePass/: CMakeLists.txt
src/submodules/: accelerate.jl  vml.jl  yeppp.jl
test/: AccelerateTests.jl  VMLTests.jl  VectorizeTests.jl  YepppTests.jl  runtests.jl
